# microservices_rust

./: .gitattributes  Cargo.toml  cert.pem  key.pem
config/: Cargo.toml
config/src/: lib.rs  mod.rs
configs/auth_service/: config.toml
configs/gateway_service/: config.toml
configs/hello_service/: config.toml
hello_service/: Cargo.toml  build.rs
hello_service/src/: main.rs
hello_service/src/config/: settings.rs
hello_service/src/handlers/: hello.rs
hello_service/src/server/: service.rs
internal/gateway_service/: Cargo.toml  build.rs
internal/gateway_service/src/: main.rs
internal/gateway_service/src/errors/: errors.rs
internal/gateway_service/src/handler/: auth.rs
internal/gateway_service/src/http2_serve/: http2_serve.rs  mod.rs
internal/gateway_service/src/http3/: http3_server.rs  mod.rs
internal/gateway_service/src/http3_serve/: http3_serve.rs  mod.rs
internal/gateway_service/src/server/: mod.rs  service.rs
internal/hello_service/: Cargo.toml
internal/hello_service/src/: main.rs
internal/hello_service/src/handlers/: hello.rs
internal/hello_service/src/server/: service.rs
libs/config/src/: config.rs
libs/logger/src/: lib.rs
logger/: Cargo.toml
pkg/config/: Cargo.toml
pkg/config/src/: config.rs  lib.rs  settings.rs
pkg/logger/src/: lib.rs
proto/: auth_service.proto  hello.proto
src/hello_service/: Cargo.toml  build.rs
src/hello_service/src/: main.rs
src/hello_service/src/handlers/: hello.rs
utils/: response_utils.rs
