[package]
name = "gateway_service"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
tonic = "0.9"
log = "0.4"
prost = "0.11"
tonic-web = "0.9"
prost-wkt-types = "0.6.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio-rustls = "0.24"
serde_json = "1.0"
tower = "0.4"
tracing = "0.1"
rcgen = "0.11"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal dependencies
config = { path = "../../pkg/config" }
logger = { path = "../../pkg/logger" }

[build-dependencies]
tonic-build = "0.9"

[[bin]]
name = "gateway_service"
path = "src/main.rs"
