[package]
name = "gateway_service"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = { version = "0.23.27", features = ["aws_lc_rs"] }
thiserror = "2.0.12"
log = "0.4.22"
rustls-pemfile = "2.2.0"
prost = "0.13.5"
tonic-web = "0.12.2"
prost-wkt-types = "0.6.0"
quinn = "0.11.5"
tokio-rustls = "0.26.2"
tracing = "0.1.40"
rcgen = "0.13.1"
tokio = { version = "1.40.5", features = ["full"] }
tonic = "0.12.2"
tower = "0.5.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Internal dependencies
config = { path = "../../pkg/config" }
logger = { path = "../../pkg/logger" }
futures = "0.3.31"
bytes = "1.10.1"
http-body-util = "0.1.3"
http-body = "1.0.1"
env_logger = "0.11.5"
tokio-util = { version = "0.7.12", features = ["compat"] }
anyhow = "1.0.89"
hyper-util = { version = "0.1.9", features = ["http2", "tokio"] }
hyper = "1.6.0"

[build-dependencies]
tonic-build = "0.13.1"

[[bin]]
name = "gateway_service"
path = "src/main.rs"
