[package]
name = "hello_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.13.0"
prost = "0.13.5"
tokio = { version = "1", features = ["full"] }
log = "0.4"
logger = { path = "../../pkg/logger" }
config = { path = "../../pkg/config" }

[build-dependencies]
tonic-build = "0.13.0"
